--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "next": "12.0.10",
     "react": "17.0.2",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-ionicons": "^4.2.0"
   },
