--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
-    "react-ionicons": "^4.2.0"
+    "react-ionicons": "^4.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "eslint": "8.8.0",
