using getServerSideProps function with axios to get data and returning it to props, which will be used to replace static movie data in components and pages.

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL = mongodb+srv://<SchlockbusterUser>:<Klass555>@cluster0.c8nhz.mongodb.net/schlockDB?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://SchlockbusterUser:Klass555@cluster0.c8nhz.mongodb.net/movie?retryWrites=true&w=majority
