--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "axios": "^0.26.1",
     "mongoose": "^6.2.11",
     "next": "12.0.10",
     "react": "17.0.2",
