--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "17.0.2",
     "react-ionicons": "^4.2.0",
+    "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
