--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
     "cookie": "^0.5.0",
+    "mongodb": "^4.5.0",
     "mongoose": "^6.2.11",
     "next": "12.0.10",
     "react": "17.0.2",
